<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Admin.VoterList.ViewVoterCardActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_my_election_card"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/img_satamev_jayte_logo"
                android:src="@drawable/satamev_jayte_logo"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_election_commssion_of_india"
                android:text="@string/election_commision_of_india"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16dp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_identity_card"
                android:text="@string/identity_card"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="24dp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_epic_no_title"
                    android:text="@string/full_name_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_epic_no"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_full_name_title"
                    android:text="@string/epic_no_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_full_name"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_gender_title"
                    android:text="@string/gender_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_gender"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_mobile_no_title"
                    android:text="@string/mobile_no_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_mobile_no"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address_title"
                    android:text="@string/address_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_your_voting_place_title"
                    android:text="@string/your_voting_address_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_your_voting_place"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>